--- a/styles/_footer.scss
+++ b/styles/_footer.scss
@@ -1,23 +1,13 @@
 .footer {
   &__runnig-string {
-    @include AchivoH1;
-    color: $black;
+    @include AchivoH1($black);
     background-color: $pink-dark;
     width: 3250px;
-    padding-top: 39px;
-    padding-bottom: 28px;
+    padding: 39px 0 28px;
     margin-top: 12px;
     @media (width < $width-tablet) {
-      padding-top: 10px;
-      padding-bottom: 1px;
+      padding: 10px 0 1px;
       margin-top: 12px;
-      // margin-top: 25px;
-      // width: 2150px;
-      // margin-bottom: 194px;
-    }
-    @media (width < $width-smartpthone) {
-      // margin-top: -10px;
-      // transform: rotate(-4deg);
     }
   }
   &__container {
@@ -74,8 +64,9 @@
     }
   }
   &__small-box:nth-child(3) {
-    margin-top: -76px;
-    flex-basis: 100%;
+    margin-top: -108px;
+    flex-basis: 80%;
+    width: 281px;
     @media (width < $width-tablet) {
       order: 2;
       margin-top: -1px;
@@ -94,12 +85,12 @@
     padding-top: 96px;
     @media (width < $width-tablet) {
       order: 5;
-      padding-top: 80px;
+      padding-top: 47px;
     }
     @media (width < $width-smartpthone) {
       order: 4;
       flex-direction: column;
-      padding-top: 44px;
+      padding-top: 50px;
       row-gap: 24px;
       padding-bottom: 64px;
     }
@@ -121,8 +112,7 @@
   }
   &__menu {
     width: 120px;
-    @include Nunito15M-SLS;
-    color: $white;
+    @include Nunito15M-SLS($white);
     @media (width < $width-tablet) {
       width: 125px;
     }
@@ -147,31 +137,33 @@
     width: 153px;
     @media (width < $width-tablet) {
       width: 157px;
-      @media (width < $width-smartpthone) {
-        width: 100%;
-      }
+    }
+    @media (width < $width-smartpthone) {
+      width: 100%;
     }
   }
   &__menu:nth-child(4) {
     width: 122px;
+    @media (width < $width-tablet) {
+      width: 120px;
+    }
     @media (width < $width-smartpthone) {
       width: 100%;
     }
   }
 
   &__menu-item {
-    @include Nunito18B;
-    color: $gray70;
+    @include Nunito18B($gray70);
     @media (width < $width-smartpthone) {
       width: 100%;
       position: relative;
-      padding-bottom: 12px;
+      padding-bottom: 10px;
     }
   }
   &__menu[open] &__menu-item {
     padding-bottom: 26px;
     @media (width < $width-smartpthone) {
-      padding-bottom: 18px;
+      padding-bottom: 16px;
       width: 302px;
     }
   }
@@ -192,39 +184,31 @@
     display: none;
     @media (width < $width-smartpthone) {
       display: inline;
-      position: absolute;
-      top: 12px;
-      right: 5px;
+      @include position($t: 12px, $r: 5px);
     }
   }
   &__menu[open] &__summery-arrow {
     @media (width < $width-smartpthone) {
       display: inline;
-      position: absolute;
-      top: 12px;
-      right: 3px;
+      @include position($t: 12px, $r: 3px);
       transform: rotate(180deg);
     }
   }
 
   &__award {
-    width: 80px;
-    height: 80px;
+    @include width-heigth($w: 80px, $h: 80px);
     @media (width < $width-tablet) {
-      width: 64px;
-      height: 64px;
-      // margin-left: -12px;
+      @include width-heigth($w: 64px, $h: 64px);
     }
   }
   &__logo {
-    height: 82px;
-    width: 224px;
+    @include width-heigth($w: 228px, $h: 83px);
+    margin-top: -2px;
     fill: $white;
     transition: fill 0.3s;
     @media (width < $width-tablet) {
-      height: 64px;
-      width: 197px;
-      margin-left: -12px;
+      @include width-heigth($w: 197px, $h: 64px);
+      margin: 0 0 0 -12px;
     }
   }
   &__logo:hover {
@@ -247,15 +231,12 @@
     }
   }
   &__item {
-    @include Nunito13M-UP;
-    color: $gray35;
+    @include Nunito13M-UP($gray35);
     position: relative;
   }
   &__item:not(:first-child)::before {
     content: url(/images/icons/point.svg);
-    position: absolute;
-    top: calc(7% - 2.5px);
-    left: -14px;
+    @include position($t: calc(7% - 2.5px), $l: -14px);
     @media (width < $width-smartpthone) {
       display: none;
     }
@@ -264,12 +245,9 @@
   &__details-item::before {
     content: "";
     display: block;
-    height: 1.5px;
-    width: 0%;
+    @include width-heigth($w: 0%, $h: 1.5px);
     background-color: $white;
-    position: absolute;
-    bottom: 0;
-    right: 0px;
+    @include position($b: 0, $r: 0px);
     transition: width 0.4s;
   }
   &__contacts:hover,
@@ -290,16 +268,16 @@
   }
   &__email {
     width: 280px;
-    @include Nunito18R;
-    color: $white;
-    border: 2px solid $white;
-    border-radius: 40px;
-    background-color: transparent;
-    padding: 9px 24px;
-    box-sizing: border-box;
+    @include Nunito18R($white);
+    @include button-styles(
+      $bd-color: $white,
+      $bd-rad: 40px,
+      $pad: 9px 24px,
+      $bg-color: transparent
+    );
     margin-bottom: 8px;
     @media (width < $width-tablet) {
-      margin-bottom: 14px;
+      margin-bottom: 17px;
     }
     @media (width < $width-smartpthone) {
       width: 100%;
@@ -317,12 +295,11 @@
     @include button-styles(
       $bd-color: transparent,
       $bd-rad: 40px,
-      $pad: 8px 50px,
+      $pad: 8px 49px,
       $bg-color: $violet-dark
     );
-    width: 280px;
-    @include Nunito18B;
-    color: $white;
+    width: 281px;
+    @include Nunito18B($white);
     @media (width < $width-smartpthone) {
       width: 100%;
     }
@@ -346,19 +323,16 @@
 
   &__contacts {
     padding-top: 6px;
-    @include Nunito18B;
-    color: $white;
+    @include Nunito18B($white);
     position: relative;
     @media (width < $width-smartpthone) {
       width: fit-content;
     }
   }
   &__icon {
-    width: 32px;
-    height: 32px;
+    @include width-heigth($w: 32px, $h: 32px);
     @media (width < $width-smartpthone) {
-      width: 48px;
-      height: 48px;
+      @include width-heigth($w: 48px, $h: 48px);
     }
   }
 }
