--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -50,7 +50,8 @@ details summary::marker {
   flex-direction: column;
 }
 .wrap {
-  width: $width-tablet;
+  width: calc($width-tablet - 72px);
+  padding: 0 36px;
   margin: 0 auto;
 
   @media (width < $width-tablet) {
@@ -181,10 +182,10 @@ details summary::marker {
     margin-bottom: -20px;
     @media (width < $width-tablet) {
       height: 164px;
-      margin-bottom: 0;
+      margin-bottom: -2px;
     }
     @media (width < $width-smartpthone) {
-      height: 102px;
+      height: 100px;
     }
   }
 }
